// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioButton renders correctly when checked 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      checked={true}
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly when default checked 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={true}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly when disabled 1`] = `
<label
  className="radioButton monday-style-radio-button-component disabled"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={true}
      name=""
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly when unchecked 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      checked={false}
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with componentClassName 1`] = `
<label
  className="radioButton monday-style-radio-button-component test-classname"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with empty props 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with name 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={false}
      name="radiosName"
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;

exports[`RadioButton renders correctly with text 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value=""
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  <span
    className="label monday-style-radio-button-component__radio-label"
  >
    test text
  </span>
</label>
`;

exports[`RadioButton renders correctly with value 1`] = `
<label
  className="radioButton monday-style-radio-button-component"
  data-testid="radio-button"
>
  <span
    className="inputContainer monday-style-radio-button-component__radio-input-container"
  >
    <input
      className="input monday-style-radio-button-component__radio-input-container__radio-input"
      defaultChecked={false}
      disabled={false}
      name=""
      type="radio"
      value="optionValue"
    />
    <span
      className="control monday-style-radio-button-component__radio-input-container__radio-control labelAnimation monday-style-radio-button-component__radio-input-container__radio-control--label-animation"
    />
  </span>
  
</label>
`;
